--- a/app/views/micro_topics/_new.html.haml
+++ b/app/views/micro_topics/_new.html.haml
@@ -4,7 +4,7 @@
     = f.inputs do 
       = f.input :name, :label => 'Micro Topic'
       = f.input :category, :label => 'Category', :as => :select, 
-                           :collection => MacroTopic.all
+                           :collection => MacroTopic.order(:name)
       = f.input :new_category, :hint => 'Specify new category if none of the above apply'
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Add", :name => "commit"}
+    .controls
+      = submit_tag 'add new topic'
