--- a/app/views/yardsticks/_edit.html.haml
+++ b/app/views/yardsticks/_edit.html.haml
@@ -8,5 +8,5 @@
       = f.input :description, :as => :text, :input_html => {:rows => 7, :marker => :description} 
       = f.input :mcq, :label => "MCQ ?", :as => :boolean ,:input_html => {:marker => :mcq} 
 
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Update", :name => "commit"}
+    .controls
+      = submit_tag 'update yardstick'
