--- a/app/views/courses/_edit.html.haml
+++ b/app/views/courses/_edit.html.haml
@@ -7,11 +7,10 @@
                 :collection => Board.all, :include_blank => false,
                 :input_html => { :marker => :board_id }
       = f.input :subject_id, :label => 'Subject', :as => :select, 
-                :collection => Subject.all, :include_blank => false,
+                :collection => Subject.order(:name), :include_blank => false,
                 :input_html => { :marker => :subject_id }
       = f.input :klass, :label => 'Class', :as => :select, 
                 :collection => [*9..12], :include_blank => false,
                 :input_html => { :marker => :klass }
-
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Update", :name => "commit"}
+    .controls
+      = submit_tag 'update course'
