Changed styling of submit buttons ..
These changes should have been part of an earlier commit. Missed them then,
so adding them now

--- a/app/views/study_groups/_edit.html.haml
+++ b/app/views/study_groups/_edit.html.haml
@@ -14,6 +14,7 @@
     %span.target= "roster"
     %span.operation= "select sections"
   = form_tag teachers_update_roster_path, :method => :put, :remote => true do |f| 
-    = submit_tag "Update"
+    .controls
+      = submit_tag "Update"
     .purgeable
 
