--- a/app/views/study_groups/_new.html.haml
+++ b/app/views/study_groups/_new.html.haml
@@ -14,5 +14,5 @@
       = f.input :to, :as => :select, :collection => [*'A'..'Z'], 
                 :include_blank => false, :input_html => { :name => 'sections[to]' }
 
-    .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
+    .controls
+      = submit_tag 'create sections'
