[Admin] Upto 5 students can be added at a time now ..
.. And, instead of writing their first & last names, simply
write their full name

Simultaneous assignment to study-groups to follow.

Note, however, that with this chainge, the timestamp appended to each
new student's username *can be* the same for multiple students.
This will happen if the student records were created within the same second

However, the assumption is that their names would be different enough
not lead to a conflict

--- a/app/views/students/_new.html.haml
+++ b/app/views/students/_new.html.haml
@@ -3,10 +3,11 @@
   %legend
     %span.target= "Student"
     %span.operation= "Quick Add"
-  = semantic_form_for :student, :remote => true, :url => student_path do |f| 
+  = semantic_form_for :student, :remote => true, :url => '#' do |f| 
     .controls
-      = submit_tag 'add new student'
+      = submit_tag 'add students'
 
-    = f.inputs :name => :mandatory do 
-      = f.input :first_name
-      = f.input :last_name
+    = f.inputs do 
+      - [*1..5].each do |i|
+        = f.input :name, :input_html => {:name => "names[#{i}]", :id => "student_#{i}"}, 
+                         :label => "student ##{i}"
