Changed StudyGroup -> Sektion ..
Never liked study_group as a name. But couldn't risk using 'section'
as a model name either lest it conflict with something in Rails installation

Hence, as in the past - and the future, I would use an intentional
mis-spelling as model name

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -10,7 +10,7 @@
     = render :partial => 'micro_topics/new'
     = render :partial => 'teachers/new'
     = render :partial => 'students/new'
-    = render :partial => 'study_groups/new'
+    = render :partial => 'sektions/new'
     = render :partial => 'examiners/new'
     = render :partial => 'teachers/edit'
 
@@ -25,9 +25,9 @@
     = render :partial => 'syllabi/edit'
     = render :partial => 'yardsticks/summary'
     = render :partial => 'teachers/list'
-    = render :partial => 'study_groups/studentlist'
-    = render :partial => 'study_groups/edit'
-    = render :partial => 'study_groups/radio_list'
+    = render :partial => 'sektions/studentlist'
+    = render :partial => 'sektions/edit'
+    = render :partial => 'sektions/radio_list'
     = render :partial => 'macro_topics/list'
     = render :partial => 'macro_topics/masterlist'
     = render :partial => 'micro_topics/masterlist'
