--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -8,7 +8,7 @@
     = render :partial => 'macro_topics/masterlist'
     = render :partial => 'micro_topics/masterlist'
 
-    = render :partial => 'study_groups/enrolled'
+    = render :partial => 'sektions/enrolled'
 
     = render :partial => 'teachers/roster'
 
