Provide for a default-link that would be auto-clicked on load ...
This default link would necessarily be a main-link. And it would
be different for each role

Still need to decide on where in the JS the auto-click call should
be

--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -3,7 +3,7 @@
   = main_link :for => :tbd, :with => { :panels => { :middle => '#macro-tagging-options',
                                                     :right => '#micro-tagging-options' } }
 
-  = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", 
+  = main_link :for => :schools, :default => true, :with => {:panels => {:middle => "#new-student", 
                                                       :right => "#new-teacher"}} 
 
   = main_link :for => :examiners, :with => {:panels => {} }
