Simplifed form for creating new teacher records ..
As for students, one need only specify the full name instead of
specifying the first & last names separately

--- a/app/views/teachers/_new.html.haml
+++ b/app/views/teachers/_new.html.haml
@@ -8,7 +8,6 @@
       = submit_tag 'add new teacher'
 
     = f.inputs :name => :mandatory do 
-      = f.input :first_name
-      = f.input :last_name
+      = f.input :name, :input_html => { :name => "teacher[name]" }
       = f.input :subjects, :label => 'teaches?', :as => :select, 
                 :collection => Subject.all, :include_blank => false, :multiple => true
