--- a/app/assets/stylesheets/tweaks.css
+++ b/app/assets/stylesheets/tweaks.css
@@ -28,14 +28,15 @@
 } 
 
 
-
+/*
 #side-panel a {
   text-decoration : none ;
   color : white ;
-  /*margin-left : 20px ;
+  margin-left : 20px ;
   line-height : 5 ;
-  padding-bottom : 4px ;*/
+  padding-bottom : 4px ;
 } 
+*/
 
 #side-panel li:not([id='login-anchor']) {
   margin-bottom : 20px ;
