Make nail-file available in the #toolbox

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -16,6 +16,7 @@
     = render :partial => 'toolbox/katana'
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/inline_error'
+    = render :partial => 'toolbox/nail_file'
 
 !!!5
 
