Added an extra push-button to nail-file & modified customization logic ..
Tally of elements :
  1. nail-file -> 3
  2. swiss-knife -> 5 (not including the trojan )
  3. katana -> 7 (not including the labels & trojan field )

--- a/app/views/toolbox/_nail_file.html.haml
+++ b/app/views/toolbox/_nail_file.html.haml
@@ -1,4 +1,5 @@
 
 .blueprint.toolbox.nail-file.full-width{ :marker => 'tbd' }
-  %a{ :href => '#', :marker => 'tbd' }= "Link text" 
-  %input.button.right{ :type => :button, :disabled => true, :marker => 'tbd', :value => "Preview" }
+  %a.hidden{ :href => '#', :marker => 'tbd' }= "Link text" 
+  %input.button.left.hidden{ :type => :button, :disabled => true, :marker => 'tbd'}
+  %input.button.right.hidden{ :type => :button, :disabled => true, :marker => 'tbd'}
