Nail-file now has just 2 <a> instead of one <a> and 2 buttons ...
Jsut as the way to a man's heart is through his stomach, the way to
a PDF download is through an <a>. Hence, retaining just the <a>

Code for nail-file customization changed accordingly

--- a/app/views/toolbox/_nail_file.html.haml
+++ b/app/views/toolbox/_nail_file.html.haml
@@ -1,5 +1,4 @@
 
 .blueprint.toolbox.nail-file.full-width{ :marker => 'tbd' }
-  %a.hidden{ :href => '#', :marker => 'tbd' }= "Link text" 
-  %input.button.left.hidden{ :type => :button, :disabled => true, :marker => 'tbd'}
-  %input.button.right.hidden{ :type => :button, :disabled => true, :marker => 'tbd'}
+  %a.hidden.left{ :href => '#', :marker => 'tbd' }= "Link text" 
+  %a.hidden.right{ :href => '#', :marker => 'tbd' }= "Link text" 
