--- a/app/assets/stylesheets/new-interface.css
+++ b/app/assets/stylesheets/new-interface.css
@@ -203,6 +203,7 @@ fieldset.inputs li.boolean.input {
   color : white ;
   min-width : 70px ;
   text-align : center ;
+  margin-bottom : 18px ;
 }
 
 .nail-file > a[type="quiz-download"] {
@@ -210,7 +211,18 @@ fieldset.inputs li.boolean.input {
 }
 
 .nail-file > a[type="test-download"] {
-  border : 1px solid orange ;
+  font-size : 12px ;
+  font-weight : normal ;
+  /*color : #7ea974 ; */
+  color : #6ca7ab ; 
+  margin-top : 2px ;
+  margin-bottom : 0px ;
+  width : 70% ;
+  float : left ;
+  padding : 1px ;
+  -moz-border-radius : 0px ; 
+  border-radius : 0px ;
+  font-weight : bold ;
 }
 
 .nail-file > a[type="preview"] {
