--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -1,9 +1,9 @@
 
 %ul.no-bullets
-  = main_link :for => :tbd, :with => { :panels => { :middle => '#macro-tagging-options',
+  = main_link :for => :pending, :default => true, :with => { :panels => { :middle => '#macro-tagging-options',
                                                     :right => '#micro-tagging-options' } }
 
-  = main_link :for => :schools, :default => true, :with => {:panels => {:middle => "#new-student", 
+  = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", 
                                                       :right => "#new-teacher"}} 
 
   = main_link :for => :examiners, :with => {:panels => {} }
