--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -19,6 +19,7 @@
     = render :partial => 'schools/controls'
     = render :partial => 'micro_topics/controls'
     = render :partial => 'examiners/controls'
+    = render :partial => 'examiners/pending'
 
     = render :partial => 'schools/admin-view'
     = render :partial => 'courses/summary'
@@ -31,7 +32,6 @@
     = render :partial => 'macro_topics/list'
     = render :partial => 'macro_topics/masterlist'
     = render :partial => 'micro_topics/masterlist'
-    = render :partial => 'question/tbd'
     = render :partial => 'question/tag'
   
     = render :partial => 'toolbox/swiss_knife'
