Initial commit of side-panel definition for showing pending tasks of an examiner

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -20,6 +20,7 @@
     = render :partial => 'micro_topics/controls'
     = render :partial => 'examiners/controls'
     = render :partial => 'examiners/pending'
+    = render :partial => 'examiners/ungraded'
 
     = render :partial => 'schools/admin-view'
     = render :partial => 'courses/summary'
