--- a/app/views/examiners/_pending.html.haml
+++ b/app/views/examiners/_pending.html.haml
@@ -13,5 +13,10 @@
     .controls
       = submit_tag :update 
       %input#pending-preview-button{:type => :button, :value => "preview"}
-
     .samurai-garrison.purgeable
+
+#pending-controls.top-panel-controls
+  %ul.no-bullets
+    = minor_link :for => 'grading', :label => 'scans to grade', 
+                 :with => {:panels => {:side => '#ungraded-responses'}}
+    
