--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -1,8 +1,6 @@
 
 %ul.no-bullets
-  = main_link :for => :pending, :default => true, :with => { :panels => { :middle => '#macro-tagging-options',
-                                                    :right => '#micro-tagging-options' } }
-
+  = main_link :for => :pending, :default => true
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", 
                                                       :right => "#new-teacher"}} 
 
