--- a/app/views/examiners/_pending.html.haml
+++ b/app/views/examiners/_pending.html.haml
@@ -13,6 +13,27 @@
   #macro-selection
   #micro-selection
   #misc-traits
+    = semantic_form_for :misc, :remote => true, :url => '/question', :method => :put do |f|
+      = f.inputs do
+        = f.input :id, :wrapper_html => { :class => 'hidden' }
+        = f.input :micro_topic_id, :wrapper_html => { :class => 'hidden' }
+        = f.input :marks, :as => :select, :include_blank => false,
+                  :collection => [*1..6], 
+                  :wrapper_html => {:class => 'full-width'}
+        = f.input :difficulty, :as => :select, :include_blank => false,
+                  :collection => {:introductory => 1, :intermediate => 2, :advanced => 3},
+                  :wrapper_html => {:class => 'full-width'},
+                  :label => 'topic treatment'
+        = f.input :page_length, :as => :select, :include_blank => false,
+                  :collection => {'mcq' => 1, 'half-page' => 2, 'full-page' => 3},
+                  :wrapper_html => {:class => 'full-width'}
+        = f.input :multi_correct, :as => :select, :include_blank => false,
+                  :collection => {:no => false, :yes => true}, :label => '>1 choice correct',
+                  :wrapper_html => {:class => 'full-width'}
+        = f.input :num_parts, :as => :select, :include_blank => false, :label => '# sub-parts',
+                  :collection => [*1...6], :wrapper_html => {:class => 'full-width'}
+      .controls
+        = submit_tag 'submit'
 
 #pending-controls.top-panel-controls
   %ul.no-bullets
