Temp commit, building towards ability to view scanned graded_responses
right now, can only list all pending quizzes - irrespective of the examiner.
And till the time the scans don't come in and assigned by the cron-jpb, we
can only build the shell

--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -1,5 +1,13 @@
 
-#ungraded-responses
-  %legend
-    %span.target= "need grading"
-    %span.operation= "click to preview, (1-9) to grade"
+#ungraded-responses.flipchart
+  %ul
+    %li
+      %a{ :href => '#pending-quizzes'}= 'quizzes'
+    %li
+      %a{ :href => '#pending-pages' }= 'by page'
+    %li
+      %a{ :href => '#pending-students' }= 'per student'
+  #pending-quizzes
+  #pending-pages
+  #pending-students
+
