Renamed main-link 'pending' in admin console to 'workbench'

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -19,7 +19,7 @@
     = render :partial => 'schools/controls'
     = render :partial => 'micro_topics/controls'
     = render :partial => 'examiners/controls'
-    = render :partial => 'examiners/pending'
+    = render :partial => 'examiners/workbench'
     = render :partial => 'examiners/ungraded'
 
     = render :partial => 'schools/admin-view'
