--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -1,6 +1,6 @@
 
 %ul.no-bullets
-  = main_link :for => :pending, :default => true
+  = main_link :for => :workbench, :default => true
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", 
                                                       :right => "#new-teacher"}} 
 
