--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -1,5 +1,5 @@
 
-#pending-summary.flipchart
+#workbenches-summary.flipchart
   %ul
     %li
       %a{ :href => '#examiner-untagged' }= "Pending"
@@ -35,7 +35,7 @@
       .controls
         = submit_tag 'submit'
 
-#pending-controls.top-panel-controls
+#workbench-controls.top-panel-controls
   %ul.no-bullets
     = minor_link :for => 'grading', :label => 'scans to grade', 
                  :with => {:panels => {:side => '#ungraded-responses'}}
