--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -21,6 +21,7 @@
     = render :partial => 'examiners/controls'
     = render :partial => 'examiners/workbench'
     = render :partial => 'examiners/ungraded'
+    = render :partial => 'examiners/blockDbSlots'
 
     = render :partial => 'schools/admin-view'
     = render :partial => 'courses/summary'
