--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -39,4 +39,5 @@
   %ul.no-bullets
     = minor_link :for => 'grading', :label => 'scans to grade', 
                  :with => {:panels => {:side => '#ungraded-responses'}}
+    = minor_link :for => 'db-slots', :label => 'add questions to db'
     
