--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -9,7 +9,8 @@
   = main_link :for => :courses, :with => {:panels => { :middle => '#macro-selection', 
                                                        :right => '#edit-syllabi-form' } }
 
-  = main_link :for => :yardsticks, :with => {:panels => {:middle => '#edit-yardstick'}}
+  = main_link :for => :yardsticks
+  = main_link :for => 'scan-loader'
 
   = main_link :for => :logout, :href => "/logout", :dynamic => false
 
