--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -26,7 +26,7 @@
     = render :partial => 'schools/admin-view'
     = render :partial => 'courses/summary'
     = render :partial => 'syllabi/edit'
-    = render :partial => 'yardsticks/summary'
+    = render :partial => 'yardsticks/list'
     = render :partial => 'teachers/list'
     = render :partial => 'sektions/studentlist'
     = render :partial => 'sektions/edit'
