main_link_for & minor_link_for now accept an :as option in lieu of :label
Previously, main-link labels could not be overridden. But now they can be
- as they could be for minor-links. Moreover, if labels for both
can be over-ridden, then it makes sense to do it in the same consistent way

--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -37,7 +37,8 @@
 
 #workbench-controls.top-panel-controls
   %ul.no-bullets
-    = minor_link :for => 'grading', :label => 'scans to grade', 
+    = minor_link :for => 'grading', :as => 'scans to grade', 
                  :with => {:panels => {:side => '#ungraded-responses'}}
-    = minor_link :for => 'db-slots', :label => 'add questions to db'
+    = minor_link :for => 'db-slots', :as => 'add questions to db'
+    = minor_link :for => 'new-scans', :as => 'get new scans'
     
