--- a/app/views/courses/_controls.html.haml
+++ b/app/views/courses/_controls.html.haml
@@ -1,8 +1,8 @@
 
 #course-controls.top-panel-controls
   %ul.no-bullets
-    = minor_link :for => 'add-course', :label => "New Course"  
-    = minor_link :for => 'add-topic', :label => "New Topic"  
+    = minor_link :for => 'add-course', :as => "New Course"  
+    = minor_link :for => 'add-topic', :as => "New Topic"  
   = form_tag courses_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = drop_down_menu_for :subjects
     = drop_down_menu_for :boards
