--- a/app/views/examiners/_controls.html.haml
+++ b/app/views/examiners/_controls.html.haml
@@ -3,5 +3,5 @@
   %ul.no-bullets
     = minor_link :for => :me 
     - if current_account.role == :admin
-      = minor_link :for => 'other-examiners', :label => 'others'
-      = minor_link :for => 'add-examiner', :label => 'add'
+      = minor_link :for => 'other-examiners', :as => 'others'
+      = minor_link :for => 'add-examiner', :as => 'add'
