Teachers now see the same 'colour-card' interface as Admins when viewing yardsticks ..
However, unlike Admins, teachers cannot edit the meaning and/or example text.
They can only change the % of alloted marks they want to give for each state.
This last bit still needs to be done though

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -18,6 +18,8 @@
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/nail_file'
 
+    = render :partial => 'yardsticks/list'
+
 !!!5
 
 %html{html_attrs}
