Complete overhaul of the quiz-building interface ...
Using flipcharts now ..

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -2,7 +2,6 @@
 - content_for :toolbox do 
   #toolbox.hidden 
     = render :partial => 'quizzes/controls'
-    = render :partial => 'quizzes/build'
 
     = render :partial => 'macro_topics/masterlist'
     = render :partial => 'micro_topics/masterlist'
@@ -11,6 +10,7 @@
 
     = render :partial => 'teachers/roster'
     = render :partial => 'teachers/assignquiz'
+    = render :partial => 'teachers/buildquiz'
 
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/katana'
