--- a/app/views/quizzes/_controls.html.haml
+++ b/app/views/quizzes/_controls.html.haml
@@ -2,4 +2,4 @@
 #quiz-controls.top-panel-controls
   %ul.no-bullets
     = minor_link :for => 'new-quiz', :label => 'make new quiz',
-                 :with => { :panels => {:side => '#quiz-builder-form'} }
+                 :with => { :panels => {:side => '#build-quiz'} }
