Final step in building a quiz using the new flipchart based interface ..

--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -23,5 +23,5 @@
   #question-options
     = form_tag 'teacher/build_quiz', :remote => true, :method => :put do |f| 
       .controls
-        = submit_tag 'next'
+        = submit_tag 'build quiz'
       .form-fields
