Changed all .controls in HAML to .submit-buttons ...
Both of these were doing the same thing - namely, serving as the containing
element of <form> submit buttons. There was therefore little point in
having 2 different class attributes

--- a/app/views/schools/_new.html.haml
+++ b/app/views/schools/_new.html.haml
@@ -4,7 +4,7 @@
     %span.target= "Quick Add"
     %span.operation= "School"
   = semantic_form_for :school, :remote => true, :url => school_path do |f| 
-    .controls
+    .submit-buttons
       = submit_tag 'new school'
 
     = f.inputs do 
