--- a/app/views/sektions/_edit.html.haml
+++ b/app/views/sektions/_edit.html.haml
@@ -14,7 +14,7 @@
     %span.target= "roster"
     %span.operation= "select sections"
   = form_tag teacher_update_roster_path, :method => :put, :remote => true do |f| 
-    .controls
+    .submit-buttons
       = submit_tag "Update"
     .purgeable
 
