--- a/app/views/syllabi/_edit.html.haml
+++ b/app/views/syllabi/_edit.html.haml
@@ -4,5 +4,5 @@
     %span.target= "specific topics"
     %span.operation= "select difficulty levels and submit"
   = form_tag '/syllabus', :method => :put, :remote => true do |f|
-    .controls
+    .submit-buttons
       = submit_tag 'add selected to course'
