--- a/app/views/yardsticks/_edit.html.haml
+++ b/app/views/yardsticks/_edit.html.haml
@@ -10,5 +10,5 @@
                 :collection => [*0..20].map {|x| x*5}, :include_blank => false,
                 :input_html => {:marker => :default_allotment, :class => :right}
 
-    .controls
+    .submit-buttons
       = submit_tag 'update yardstick'
