--- a/app/views/courses/_edit.html.haml
+++ b/app/views/courses/_edit.html.haml
@@ -12,5 +12,5 @@
       = f.input :klass, :label => 'Class', :as => :select, 
                 :collection => [*9..12], :include_blank => false,
                 :input_html => { :marker => :klass }
-    .controls
+    .submit-buttons
       = submit_tag 'update course'
