--- a/app/views/courses/_new.html.haml
+++ b/app/views/courses/_new.html.haml
@@ -10,5 +10,5 @@
                 :collection => Subject.all, :include_blank => false
       = f.input :klass, :label => 'Class', :as => :select, 
                 :collection => [*9..12], :include_blank => false
-    .controls
+    .submit-buttons
       = submit_tag 'add new course'
