--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -32,7 +32,7 @@
                   :wrapper_html => {:class => 'full-width'}
         = f.input :num_parts, :as => :select, :include_blank => false, :label => '# sub-parts',
                   :collection => [*1...6], :wrapper_html => {:class => 'full-width'}
-      .controls
+      .submit-buttons
         = submit_tag 'submit'
 
 #workbench-controls.top-panel-controls
