--- a/app/views/micro_topics/_new.html.haml
+++ b/app/views/micro_topics/_new.html.haml
@@ -6,5 +6,5 @@
       = f.input :category, :label => 'Category', :as => :select, 
                            :collection => MacroTopic.order(:name)
       = f.input :new_category, :hint => 'Specify new category if none of the above apply'
-    .controls
+    .submit-buttons
       = submit_tag 'add new topic'
