--- a/app/views/schools/_edit.html.haml
+++ b/app/views/schools/_edit.html.haml
@@ -4,7 +4,7 @@
     %span.target= "Quick Edit"
     %span.operation= "School"
   = semantic_form_for :school, :remote => true, :url => '/school', :method => :put do |f| 
-    .controls
+    .submit-buttons
       = submit_tag 'update school'
 
     = f.inputs do 
