--- a/app/views/sektions/_new.html.haml
+++ b/app/views/sektions/_new.html.haml
@@ -14,5 +14,5 @@
       = f.input :to, :as => :select, :collection => [*'A'..'Z'], 
                 :include_blank => false, :input_html => { :name => 'sections[to]' }
 
-    .controls
+    .submit-buttons
       = submit_tag 'create sections'
