--- a/app/views/sektions/_studentlist.html.haml
+++ b/app/views/sektions/_studentlist.html.haml
@@ -5,6 +5,6 @@
     %a#view-students-in-section-link.right{:href => '#'}= "enrolled"
     %a#view-unassigned-students-link.right{:href => '#'}= "unassigned"
   = form_tag sektions_update_student_list_path, :remote => true, :method => :put do |f| 
-    .controls
+    .submit-buttons
       = submit_tag "assign to selected"
     .purgeable
