--- a/app/views/students/_new.html.haml
+++ b/app/views/students/_new.html.haml
@@ -4,7 +4,7 @@
     %span.target= "Student"
     %span.operation= "Quick Add"
   = semantic_form_for :student, :remote => true, :url => '#' do |f| 
-    .controls
+    .submit-buttons
       = submit_tag 'add students'
 
     = f.inputs do 
