--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -12,16 +12,16 @@
   #courses-taught
   #macro-selection-list
     = form_tag 'course/applicable_micros', :remote => true, :method => :put do |f| 
-      .controls
+      .submit-buttons
         = submit_tag 'next'
       .form-fields
   #micro-selection-list
     = form_tag 'course/applicable_questions', :remote => true, :method => :put do |f| 
-      .controls
+      .submit-buttons
         = submit_tag 'next'
       .form-fields
   #question-options
     = form_tag 'teacher/build_quiz', :remote => true, :method => :put do |f| 
-      .controls
+      .submit-buttons
         = submit_tag 'build quiz'
       .form-fields
