--- a/app/views/teachers/_edit.html.haml
+++ b/app/views/teachers/_edit.html.haml
@@ -6,5 +6,5 @@
       = f.input :last_name, :input_html => { :marker => :last_name }
       = f.input :subject_ids, :label => 'teaches?', :as => :select, 
                 :collection => Subject.all, :multiple => true, :input_html => { :marker => :subject_ids }
-    .controls
+    .submit-buttons
       = submit_tag 'update teacher'
