--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1,6 +1,7 @@
 
 $blue:#00007f ;
 $gray:#191919 ;
+$light-gray: lighten($gray, 30%) ;
 
 body {
   font-family : "Trebuchet MS", Helvetica, Arial, sans-serif ; 
@@ -79,6 +80,22 @@ form.formtastic > .submit-buttons > input {
   border-right: 3px solid lighten($gray, 30%) ;
   padding-right: 10px ;
   min-height: 400px ;
+
+  .ui-state-active {
+    a:link {
+      color: white ;
+    }
+  }
+  .ui-state-disabled {
+    a:link {
+      color: white ; 
+    }
+  }
+
+  .ui-widget-header, .ui-tabs-nav {
+    background-color: inherit ; 
+  }
+
 }
 
 #middle-panel, #right-panel {
